Show markers on google map

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>What To Wear?</title>
+  <title>Give My Stuff</title>
   <!--Add bootstrap and css here here-->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
