--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
+  <meta property="og:url" content="http://give-my-stuff.herokuapp.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Give My Stuff" />
+  <meta property="og:description" content="Find clothing donation drop boxes near you." />
+  <!--<meta property="og:image" content="" />-->
   <title>Give My Stuff</title>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
