--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <meta property="og:url" content="http://give-my-stuff.herokuapp.com" />
+  <meta property="og:url" content="https://give-my-stuff.herokuapp.com" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Give My Stuff" />
   <meta property="og:description" content="Find clothing donation drop boxes near you." />
