Correct og:image meta property

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Give My Stuff" />
   <meta property="og:description" content="Find clothing donation drop boxes near you." />
-  <meta property="og:image" content="%PUBLIC_URL/give-my-stuff-og-image.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/give-my-stuff-og-image.png" />
   <title>Give My Stuff</title>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
